force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/HealthCloudGA__EhrMedicationPrescription__c.object-meta.xml
<CustomObject>
    <description>An order for both supply of the medication and the instructions for administration of the medicine to a patient.</description>
    <label>EHR Medication Prescription</label>
    <nameField>
        <displayFormat>Pres-{0}</displayFormat>
        <label>EHR Medication Prescription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Medication Prescriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>