force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DateWritten__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DateWritten__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Written</label>
    <type>DateTime</type>
</CustomField>