force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseExpectedSupplyDuration__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseExpectedSupplyDuration__c</fullName>
    <label>Dispense Expected Supply Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>