force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationExpiration__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationExpiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispense Medication Expiration</label>
    <type>DateTime</type>
</CustomField>