force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationKindCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationKindCode__c</fullName>
    <description>product | package code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>product | package code</inlineHelpText>
    <label>Dispense Medication Kind Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>