force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationKindLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationKindLabel__c</fullName>
    <description>product | package friendly name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>product | package friendly name</inlineHelpText>
    <label>Dispense Medication Kind Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>