force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationKindSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationKindSystem__c</fullName>
    <description>product | package code system</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>product | package code system</inlineHelpText>
    <label>Dispense Medication Kind System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>