force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationLabel__c</fullName>
    <description>Friendly name for this medication</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Friendly name for this medication</inlineHelpText>
    <label>Dispense Medication Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>