force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationProductFormLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationProductFormLabel__c</fullName>
    <description>powder | tablets | carton + friendly name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>powder | tablets | carton + friendly name</inlineHelpText>
    <label>Dispense Medication Product Form Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>