force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationProductFormSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationProductFormSystem__c</fullName>
    <description>powder | tablets | carton + system</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>powder | tablets | carton + system</inlineHelpText>
    <label>Dispense Medication Product Form System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>