force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseNumberOfRepeatAllowed__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseNumberOfRepeatAllowed__c</fullName>
    <label>Dispense Number Of Repeat Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>