force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseQuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseQuantityUnit__c</fullName>
    <description>Amount of medication to supply per dispense unit of measure</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Amount of medication to supply per dispense unit of measure</inlineHelpText>
    <label>Dispense Quantity Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>