force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseQuantityValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseQuantityValue__c</fullName>
    <description>Amount of medication to supply per dispense</description>
    <inlineHelpText>Amount of medication to supply per dispense</inlineHelpText>
    <label>Dispense Quantity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>