force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
    <description>IF Status = Completed AND (Dispense Validity Period End + Dispense Expected Supply Duration) &gt; TODAY return true else return false</description>
    <formula>IF( AND( UPPER(HealthCloudGA__StatusLabel__c) = &apos;COMPLETED&apos;, (DateValue(HealthCloudGA__DispenseValidityPeriodEnd__c + HealthCloudGA__DispenseExpectedSupplyDuration__c) &gt; TODAY())) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>