force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__MedicationCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationCode__c</fullName>
    <description>Code that identify this medication</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Code that identify this medication</inlineHelpText>
    <label>Medication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>