force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__MedicationCodeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationCodeSystem__c</fullName>
    <description>System for Code that identifies this medication</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>System for Code that identifies this medication</inlineHelpText>
    <label>Medication Code System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>