force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__Prescriber__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>Medication Prescriptions</relationshipLabel>
    <relationshipName>MedicationPrescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>