force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__ReasonCondition__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReasonCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason Condition</label>
    <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
    <relationshipLabel>Medication Prescriptions</relationshipLabel>
    <relationshipName>MedicationPrescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>