force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__ReasonSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReasonSystem__c</fullName>
    <description>Coding System for ReasonCode  or indication for writing the prescription</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Coding System ReasonCode or indication for writing the prescription</inlineHelpText>
    <label>Reason System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>