force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusCode__c</fullName>
    <description>Code for: active | on-hold | completed | entered-in-error | stopped | superseded | draft</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Code for: active | on-hold | completed | entered-in-error | stopped | superseded | draft</inlineHelpText>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>