force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__StatusLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusLabel__c</fullName>
    <description>Friendly name for Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Friendly name for Status</inlineHelpText>
    <label>Status Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>