force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictTypeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictTypeSystem__c</fullName>
    <description>generic | formulary + coding system</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>generic | formulary + coding system</inlineHelpText>
    <label>Substitute Restrict Type System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>