force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Clinical_Trial_Transition_Product__c.field-meta.xml
<CustomField>
    <fullName>MVN_Clinical_Trial_Transition_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prescription for patients transitioning from a clinical trial.</description>
    <inlineHelpText>Prescription for Clinical Trial Transition Manufacturer-Provided Product (no cost to patient).</inlineHelpText>
    <label>Clinical Trial Transition Product</label>
    <type>Checkbox</type>
</CustomField>