force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_CTTP_Manufacturer_Provided_Product__c.field-meta.xml
<CustomField>
    <fullName>MVN_CTTP_Manufacturer_Provided_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTTP Manufacturer-Provided Product</label>
    <type>Checkbox</type>
</CustomField>