force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Days_Supply__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_Supply__c</fullName>
    <label>Days&apos; Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>