force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Dose__c.field-meta.xml
<CustomField>
    <fullName>MVN_Dose__c</fullName>
    <label>Dose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 mg/kg IV once monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>