force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Infusion_Fluid_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Infusion_Fluid_Type__c</fullName>
    <label>Infusion Fluid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.9% Sodium Chloride Injection, USP 250 mL bag</fullName>
            </value>
            <value>
                <fullName>5% Dextrose Injection, USP 250 mL bag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>