force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Need_Supply_For_Sched_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Need_Supply_For_Sched_Treatment_Date__c</fullName>
    <description>Treatment scheduled date for patients who are already on treatment when enrolled.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the patient has already started treatment, supply is needed for the scheduled treatment on this date.</inlineHelpText>
    <label>Need Supply for Scheduled Treatment Date</label>
    <type>Date</type>
</CustomField>