force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MVN_Special_Instructions__c</fullName>
    <formula>IF(RecordType.DeveloperName=&quot;MVN_Evkeeza&quot;,&quot;Administer by intravenous infusion over 60 minutes&quot;,&quot;&quot;)</formula>
    <label>Special Instructions</label>
    <type>Text</type>
</CustomField>