force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/MVN_Substitution__c.field-meta.xml
<CustomField>
    <fullName>MVN_Substitution__c</fullName>
    <label>Substitution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispense As Written</fullName>
            </value>
            <value>
                <fullName>Substitution Permitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>