force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>EHR_Medication_Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>