force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Dose__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose__c</fullName>
    <description>Number of product to be taken a patient as specified by the physician on the prescription.</description>
    <label>Dose</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>