force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Dose_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose_Instructions__c</fullName>
    <description>Dose instructions as specified by the physician on the prescription.</description>
    <label>Dose Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a Day</fullName>
            </value>
            <value>
                <fullName>Once Every Other Day</fullName>
            </value>
            <value>
                <fullName>Twice a Day</fullName>
            </value>
            <value>
                <fullName>Three Times a Day</fullName>
            </value>
            <value>
                <fullName>Four Times a Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>