force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Dosing_Info__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dosing_Info__c</fullName>
    <description>Dosing information as specified by the prescriber on the prescription.</description>
    <label>Dosing Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a day</fullName>
            </value>
            <value>
                <fullName>Once every other day</fullName>
            </value>
            <value>
                <fullName>Twice a day</fullName>
            </value>
            <value>
                <fullName>Three times a day</fullName>
            </value>
            <value>
                <fullName>Four times a day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>