force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>PJN_IsVisibleOnPatientCard__c</fullName>
    <description>Field created as an override to the standard HealthCloudGA__IsVisibleOnPatientCard__c TRUE for all records.</description>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>