force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Number_of_Refills__c.field-meta.xml
<CustomField>
    <fullName>PJN_Number_of_Refills__c</fullName>
    <description>Number of refills prescribed.</description>
    <label>Number of Refills</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>