force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specialty or preferred pharmacy related to a patient&apos;s prescription.</description>
    <label>Pharmacy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Pharmacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescriptions (Pharmacy)</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>