force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_Name__c</fullName>
    <description>Formula to return the name of the pharmacy related to the prescription.</description>
    <formula>PJN_Pharmacy__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pharmacy Name</label>
    <type>Text</type>
</CustomField>