force-app/main/default/src/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/PJN_Pharmacy_Selection_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_Selection_Reason__c</fullName>
    <description>Reason a pharmacy has been identified for the prescription.</description>
    <label>Pharmacy Selection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Preferred</fullName>
            </value>
            <value>
                <fullName>Physician Preferred</fullName>
            </value>
            <value>
                <fullName>Payer Mandated</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>